try to fix overflow problem

--- a/index.css
+++ b/index.css
@@ -172,6 +172,7 @@ footer {
     justify-content: center;
     align-items: center;
     border-top: 1px solid black;
+    overflow: hidden;
 
 }
 
